# bugtracker_v2

./: README.md
backend/: .gitignore  app.py  pyproject.toml
backend/backend/: .env  __init__.py  config.py  origins.py  tags.py
backend/backend/auth/: auth_scopes.py  role_scope.py  routes.py  schemas.py  security.py  utils.py
backend/backend/bugs/: __init__.py  models.py  routes.py  schemas.py  utils.py
backend/backend/projects/: __init__.py  models.py  routes.py  schemas.py  utils.py
backend/backend/users/: __init__.py  models.py  routes.py  schemas.py  utils.py
backend/examples/: example1.py  example2.py  example3.py  example_4_bugs.py
frontend/: package-lock.json  package.json
frontend/components/: Header.js  LogOut.js  LoginForm.js  SignUpForm.js
frontend/context/: UserContext.js
frontend/pages/: _app.js  _error.js  index.js  login.js  signup.js
